added most of the list routes
