# docs/openapi.yaml
@@ -20,6 +20,214 @@ tags:
     description: Operational endpoints, such as health checks
 
 paths:
+  /list:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - Lists
+      summary: Create a new to-do list
+      description: 
+        Create a new to-do list entity. USER roles can only create new lists for themselves. 
+        ADMIN roles can create a new to-do list for any user.
+      requestBody:
+        description:
+          Data for the new to-do list. The attributes 'isPublic' and 'ownerId' are optional, and default to 
+          false and the ID of the user making the request respectively.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ToDoList"
+      responses:
+        '201':
+          description: ToDoList successfully created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ToDoList"
+        '400':
+          $ref: "#/components/responses/InvalidToDoListInput"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+  
+  /list/all:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Lists
+      summary: Get all to-do lists
+      description: 
+        Retrieves all to-do lists. Usable by ADMIN roles only.
+      responses:
+        '200':
+          description: All to-do lists
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoList'
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+  
+  /list/public:
+    get:
+      tags:
+        - Lists
+      summary: Get all public to-do lists.
+      description: 
+        Retrieves all public to-do lists. Anyone can acccess, authentication not required.
+      responses:
+        '200':
+          description: All public to-do lists.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoList'
+
+  /list/{list_id}:
+    get:
+      security:
+        - bearerAuth: []
+        - {}
+      tags:
+        - Lists
+      summary: Get a specific To-Do list
+      description: 
+        Retrieves the ToDoLost data for a list. If the list is public, authentication is not required and anyone can access.
+        Otherwise, USER roles may only access private lists they own. ADMIN roles can access all lists.
+      parameters:
+        - $ref: '#/components/parameters/ListId'
+      responses:
+        '200':
+          description: Info for the specified list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoList'
+        '400':
+          $ref: '#/components/responses/InvalidListId'
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+        '404':
+          $ref: '#/components/responses/ToDoListNotFound'
+    put:
+      security:
+        - bearerAuth: []
+      tags:
+        - Lists
+      summary: Updates a specific to-do list.
+      description:
+        Updates info for a specific to-do list. Used to change 'title' and 'isPublic' attributes. 
+        USER roles may only update their own lists. ADMIN roles can update any list.
+      parameters:
+        - $ref: '#/components/parameters/ListId'
+      requestBody:
+        description: The new 'title' and 'isPublic' attributes for the list.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: "To-Do List 1"
+                isPublic:
+                  type: boolean
+                  example: false
+      responses:
+        '200':
+          description: The updated list.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ToDoList"
+        '400':
+          description: Invalid Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error: 
+                    type: string
+                  details:
+                    type: array
+                    items:
+                      type: string
+                example: 
+                  error:
+                    "Validation failed"
+                  details:
+                    - "At least one field (title, isPublic) must be provided"
+                    - "URL parameter 'list_id' must be a positive integer."
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+        '404':
+          $ref: '#/components/responses/ToDoListNotFound'
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Lists
+      summary: Delete a specific to-do list
+      description: Delete a specific to-do list. USER roles may delete their own lists. ADMIN roles may delete any list.
+      parameters:
+        - $ref: '#/components/parameters/ListId'
+      responses:
+        '204':
+          description: List deleted successfully
+        '400':
+          $ref: '#/components/responses/InvalidListId'
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+        '404':
+          $ref: '#/components/responses/ToDoListNotFound'
+
+  /list/{list_id}/items:
+    get:
+      security:
+        - bearerAuth: []
+        - {}
+      tags:
+        - Lists
+      summary: Get all of the items for a specific to-do list
+      description: 
+        Retrieves the ToDoLost data for a list. If the list is public, authentication is not required and anyone can access.
+        Otherwise, USER roles may only access private lists they own. ADMIN roles can access all lists.
+      parameters:
+        - $ref: '#/components/parameters/ListId'
+      responses:
+        '200':
+          description: All items for the 
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ToDoListItem'
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '403':
+          $ref: "#/components/responses/Forbidden"
+
+# User Account Endpoints
   /users:
     get:
       security:
@@ -197,22 +405,22 @@ paths:
         '404':
           $ref: '#/components/responses/UserNotFound'
 
-  /users/{user_id}/lists/all:
+  /users/{user_id}/list/all:
     get:
       security:
         - bearerAuth: []
       tags:
         - Users
         - Lists
-      summary: Get all To-Do Lists for a specified user.
+      summary: Get all to-do lists for a specified user.
       description: 
-        Retrieves all To-Do Lists for a specified user. USER roles may only access their own lists with this endpoint.
+        Retrieves all to-do lists for a specified user. USER roles may only access their own lists with this endpoint.
         ADMIN roles can access lists for all users.
       parameters:
         - $ref: '#/components/parameters/UserId'
       responses:
         '200':
-          description: All To-Do Lists for the specified user.
+          description: All to-do lists for the specified user.
           content:
             application/json:
               schema:
@@ -228,7 +436,7 @@ paths:
         '404':
           $ref: '#/components/responses/UserNotFound'
 
-  /users/{user_id}/lists/public:
+  /users/{user_id}/list/public:
     get:
       security:
         - bearerAuth: []
@@ -236,15 +444,15 @@ paths:
       tags:
         - Users
         - Lists
-      summary: Get all public To-Do Lists for a specified user.
+      summary: Get all public to-do lists for a specified user.
       description: 
-        Retrieves all public To-Do Lists for a specified user. Anyone can acccess, but authentication is still
+        Retrieves all public to-do lists for a specified user. Anyone can acccess, but authentication is still
         required if 'user_id' is set to 'me', since that value implies that a user is logged in.
       parameters:
         - $ref: '#/components/parameters/UserId'
       responses:
         '200':
-          description: All public To-Do Lists for the specified user.
+          description: All public to-do lists for the specified user.
           content:
             application/json:
               schema:
@@ -258,6 +466,7 @@ paths:
         '404':
           $ref: '#/components/responses/UserNotFound'
 
+# Auth Endpoints
   /auth/login:
     post:
       tags:
@@ -345,11 +554,11 @@ components:
       properties:
         email:
           type: string
+          example: "user@example.com"
         password:
           type: string
-      example:
-        email: "user@example.com"
-        password: password123
+          example: password123
+
     UserInfo:
       type: object
       properties:
@@ -371,6 +580,7 @@ components:
       properties:
         id:
           type: integer
+          readOnly: true
           example: 1
         title:
           type: string
@@ -383,6 +593,29 @@ components:
           example: 1
         createdAt:
           type: string
+          readOnly: true
+          example: "2026-04-25T22:01:26.110Z"
+    
+    ToDoListItem:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+          example: 1
+        title:
+          type: string
+          example: "To-Do List 1"
+        details:
+          type: string
+          optional: true
+          example: "Additional information about To-Do List 1"
+        listId:
+          type: integer
+          example: 1
+        createdAt:
+          type: string
+          readOnly: true
           example: "2026-04-25T22:01:26.110Z"
 
   parameters: 
@@ -428,30 +661,7 @@ components:
         example: 1
 
   responses:
-    ToDoListNotFound:
-      description: ToDoList not found
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              error: 
-                type: string
-            example: 
-              error: 'To-Do List 1 not found'
-
-    UserNotFound:
-      description: User not found
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              error: 
-                type: string
-            example: 
-              error: 'User 1 not found'
-
+    # General Errors:
     Unauthorized:
       description: Client is not authenticated
       content:
@@ -488,6 +698,77 @@ components:
             example: 
               error:
                 - "Forbidden: insufficient permission"
+    # To Do List Errors:
+    InvalidListId:
+      description: Invalid User ID
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+              details:
+                type: array
+                items:
+                  type: string
+            example: 
+              error:
+                "Validation failed"
+              details:
+                - "URL parameter 'list_id' must be a positive integer."
+
+    ToDoListNotFound:
+      description: ToDoList not found
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+            example: 
+              error: 'To-Do List 1 not found'
+
+    InvalidToDoListInput:
+      description: Bad request due to invalid ToDoList data.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+              details:
+                type: array
+                items:
+                  type: string
+            example: 
+              validationExample:
+                error:
+                  "Validation failed"
+                details:
+                  - 'The "title" field is required'
+                  - 'If present, the "isPublic" must be a boolean (true or false)'
+                  - 'If present, the "ownerId" must be a positive integer'
+              badOwnerExample:
+                error:
+                  "Cannot create list: user with id 1 does not exist"
+
+
+
+    # User Errors
+    UserNotFound:
+      description: User not found
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+            example: 
+              error: 'User 1 not found'
 
     InvalidUserId:
       description: Invalid User ID
@@ -507,7 +788,6 @@ components:
                 "Validation failed"
               details:
                 - "URL parameter 'user_id' must be a positive integer, or the string 'me'"
-
 
     InvalidAuthInput:
       description: Bad request due to invalid data
@@ -541,6 +821,8 @@ components:
             example: 
               error: "Email has already been used"
 
+
+              
   securitySchemes:
     bearerAuth:
       type: http
